Added methods to superclass